# fast_sampen

./: .gitignore  CMakeLists.txt  Readme.md
include/: experiment.h  global_defs.h  kdpoint.h  kdtree.h  random_sampler.h  sample_entropy_calculator.h  sample_entropy_calculator2d.h  sample_entropy_calculator2d_direct.h  sample_entropy_calculator_direct.h  sample_entropy_calculator_kd.h  utils.h
python/: sample_entropy_calculator.pxd  sample_entropy_calculator.pyx  sample_entropy_calculator2d.pxd  sample_entropy_calculator2d.pyx  setup.py  test_sampen.py  test_sampen2d.py
sampen_kdtree-master/: Readme.md
sampen_kdtree-master/include/: kdpoint.h  random_sampler.h  sample_entropy_calculator.h  sample_entropy_calculator_direct.h
sampen_kdtree-master/script/: experiment_config.sh  run_ex_convergence.sh  run_ex_convergence_n1.sh  run_ex_sample.sh
sampen_kdtree-master/src/: kdtree_sample.cpp  random_sampler.cpp  utils.cpp
sampen_kdtree-master/test/: RandomIndicesSamplerWRTest.cpp
script/: Readme.md  compute_variance.py  ex_time.sh  ex_time_kd.sh  ex_time_linear.sh  experiment_config.sh  get_n0_policy2_kdtreemc.py  get_n0n1_policy2.py  plot_convergence.py  plot_time.py  process_convergence_n.py  quick_test_fast_sampen.sh  run_2dkq256.sh  run_ex_convergence.sh  run_ex_convergence_n.sh  run_ex_convergence_n0.sh  run_ex_convergence_n0_eeg.sh  run_ex_convergence_n0_kdtreemc_norr.sh  run_ex_convergence_n0_qmc_uniform_norr.sh  run_ex_convergence_n0_qmc_uniform_rr.sh  run_ex_convergence_n0_rr.sh  run_ex_convergence_n0n1_grid.sh  run_ex_convergence_n1.sh  run_ex_convergence_n1_eeg.sh  run_ex_convergence_n1_rr.sh  run_ex_convergence_n_fixn0n1.sh  run_ex_convergence_n_fixn0n1_chb.sh  run_ex_convergence_n_fixn0n1_jy_qmc_uniform.sh  run_ex_convergence_n_fixn0n1_rr.sh  run_ex_convergence_n_policy2.sh  run_ex_convergence_n_policy2_kdtreemc.sh  run_ex_convergence_n_policy2_qmc_uniform.sh  run_ex_convergence_n_policy2_rr.sh  run_ex_kdtree.sh  run_ex_memory.sh  run_ex_memory_fixedn0n1.sh  run_ex_n_fixn0n1_mem_opt.sh  run_ex_n_policy2_mem_opt.sh  run_ex_sample.sh  run_ex_time.sh  (+13 more)
script/experiments/: ex_memory_direct.sh  ex_memory_mcwor.sh  ex_memory_skd.sh  ex_time_2d.sh  ex_time_kdtree.sh
script/kmni_minipulation/: convert_to_csv.bash  parse_and_savemat.py
script/python_experiments/: exp_utils.py  lym_large.py  run_ex_2d.py  run_ex_gaussian_r_err.py  run_ex_mix_p_err.py  run_ex_n0_addition.py  run_ex_n0n1grid.py  run_ex_n1_addition.py  sampen_err_relation.py
src/: CMakeLists.txt  experiment_n0n1.cpp  fast_sampen.cpp  kdpoint.h  kdtree.cpp  kdtree.h  kdtree_mddc.cpp  kdtree_sample.cpp  random_sampler.cpp  random_sampler.h  sampen2d.cpp  sampen_entropy_caculator_kd.cpp  sample_entropy_calculator.cpp  sample_entropy_calculator.h  sample_entropy_calculator2d.cpp  sample_entropy_calculator_direct.cpp  sample_entropy_calculator_direct.h  sample_entropy_calculator_kd.h  utils.cpp  utils.h
test/: CMakeLists.txt  test_binary_search.cpp  test_grid.cpp  test_swr.cpp
